Application/k8s-config/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: registry.digitalocean.com/buzzword-stack-container-registry/proxy:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
