Application/k8s-config/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.digitalocean.com/buzzword-stack-container-registry/backend:latest
        ports:
        - containerPort: 5000
          name: api
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      targetPort: 5000
  selector:
    deploymentconfig: backend-deployment
